# tree-cover-segmentation

./: .gitignore  main.py  pyproject.toml
src/: const.py
src/data/: dataset.py  setup.py  transforms.py
src/models/: faster_rcnn.py  trainer.py
src/utils/: cli.py  download.py  logger.py  loss.py  misc.py  normalization_params.py  plot_sites.py  singleton.py  transforms.py  visual.py
tex/: codebase_guide.tex
