[project]
name = "single-tree-detection"
version = "0.1.0"
description = "Neural network for single tree object detection using satellite and LIDAR data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "black",
    "rich",
    "torch>=2.10.0",
    "scikit-image>=0.26.0",
    "torchvision>=0.25.0",
    "xmltodict>=1.0.4",
    "imagecodecs>=2026.3.6",
    "matplotlib>=3.10.8",
]
